objects/Initiative_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipName>Initiative_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIB Exco Champion</fullName>
                </value>
                <value>
                    <fullName>Client Exco Champion</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiatives_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>ITM{00000}</displayFormat>
        <label>Initiatives Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_from_changing_Initiative_Member</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Team_member__c)</errorConditionFormula>
        <errorDisplayField>Team_member__c</errorDisplayField>
        <errorMessage>Please don&apos;t change the value of this field.</errorMessage>
    </validationRules>
</CustomObject>